--- a/css/styles.css
+++ b/css/styles.css
@@ -644,8 +644,10 @@ img {
   display: flex;
   align-items: baseline;
 }
+.subscribe {
+  margin-left: auto;
+}
 .sub-text {
-  margin-left: 90px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -656,13 +658,13 @@ img {
 }
 .text-subcribe {
   display: flex;
-  margin-left: 90px;
   margin-bottom: 20px;
 }
 .email-footer {
   width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
+  color: var(--theme-accent);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: transparent;
@@ -683,6 +685,7 @@ img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer;
+  border: none;
 }
 .svg-subcribe {
   margin-left: 10px;
@@ -698,15 +701,18 @@ img {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
+  transition: opacity 250ms;
+  
 }
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
+  transition: opacity 250ms;
+
 }
 .modal {
   position: absolute;
   width: 528px;
-  height: 581px;
   padding: 40px;
   top: 50%;
   left: 50%;
@@ -718,10 +724,9 @@ img {
   border-radius: 4px;
 }
 .button-modal {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: absolute;
   margin-left: 450px;
+  top: 8px;
   width: 30px;
   height: 30px;
   cursor: pointer;
@@ -730,9 +735,7 @@ img {
   background-color: transparent;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .button-modal:hover, .button-modal:focus {
   color: var(--theme-button);
@@ -742,6 +745,8 @@ img {
   opacity: 1;
   pointer-events: auto;
   overflow-y: auto;
+  
+
 }
 .modal-text {
   font-weight: 700;
@@ -813,6 +818,7 @@ img {
   padding-left: 12px;
   line-height: 1.17;
   letter-spacing: 0.03em; 
+  color: var(--theme-text);
 }
 .icon-check {
   display: flex;
@@ -849,7 +855,6 @@ img {
 .button-form {
   width: 200px;
   height: 50px;
-  margin-bottom: 40px;
   color: var(--theme-accent);
   font-weight: 700;
   font-size: 16px;
@@ -862,6 +867,7 @@ img {
   transition-property: background-color, box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  border: none;
 }
 .comment {
   margin-bottom: 20px;
